fixed all repository methods